--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 
   <body> 
   <div class="container">
-  
+  <img src="Presentation1.gif">
     <center>
       <h3 class="btn btn-warning heading">  EMOTION TO EMOJI APP
         <br>
